@@ -18,6 +18,17 @@ MODx.grid.SettingsGrid = function(config) {
         }];
     }
     config.tbar.push('->',{
+        xtype: 'modx-combo-namespace'
+        ,name: 'namespace'
+        ,id: 'modx-filter-namespace'
+        ,emptyText: _('namespace_filter')
+        ,value: MODx.request['namespace'] ? MODx.request['namespace'] : 'core'
+        ,allowBlank: true
+        ,width: 150
+        ,listeners: {
+            'select': {fn: this.filterByNamespace, scope:this}
+        }
+    },{
         xtype: 'modx-combo-area'
         ,name: 'area'
         ,id: 'modx-filter-area'
@@ -30,17 +41,6 @@ MODx.grid.SettingsGrid = function(config) {
         ,allowBlank: true
         ,listeners: {
             'select': {fn: this.filterByArea, scope:this}
-        }
-    },{
-        xtype: 'modx-combo-namespace'
-        ,name: 'namespace'
-        ,id: 'modx-filter-namespace'
-        ,emptyText: _('namespace_filter')
-        ,value: MODx.request['namespace'] ? MODx.request['namespace'] : 'core'
-        ,allowBlank: true
-        ,width: 150
-        ,listeners: {
-            'select': {fn: this.filterByNamespace, scope:this}
         }
     },'-',{
         xtype: 'textfield'
